# MCP_Servers

./: README.md  pyproject.toml
Basic_client_server/: client-sse.py  client-stdio.py  server.py
LLM_Integration with MCP/: client.py  server.py
