[project]
name = "mcp-servers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=2.6.0",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "mcp[cli]==1.10.1",
    "openai==1.75.0",
    "python-dotenv>=1.2.2",
]
